--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <header>
         <h1 id="hi">Welcome to My Site</h1>
 
-        <nav>
+        <nav class="nav">
             <ul class="nav_ul">
                 <li class="nav_li"><a href="index.html">About Me</a></li>
                 <li class="nav_li"><a href="projects.html">Projects</a></li>
-                <li class="nav_li"><a href="portolio.html">Portfolio</a></li>
                 <li class="nav_li"><a href="blog.html">Blog</a></li>
                 <li class="nav_li"><a href="contact.html">Contact</a></li>
             </ul>
