--- a/blog.html
+++ b/blog.html
@@ -24,26 +24,35 @@
             </ul>
         </nav>
     </header>
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <h2>Loremius ipsimius</h2>
+                <h5>Sed malesuada massa, June 25, 2021</h5>
+                <img src="/images/lorem.jpg" alt="lorem.ipsum">
+                <p>Lorem? Ipsum!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel tempus dui,
+                    eget
+                    sagittis tortor. Cras at velit bibendum, porttitor libero quis, ullamcorper urna. Sed non augue
+                    arcu.
+                    Pellentesque quis nunc quis ligula imperdiet scelerisque. Curabitur vitae elit dignissim metus
+                    iaculis
+                    cursus. Ut congue, nulla eu feugiat eleifend, leo dolor tincidunt velit, id luctus risus sapien vel
+                    augue.
+                    Sed malesuada massa et quam porta varius eu porttitor ligula. Aliquam eleifend ipsum nunc, et dictum
+                    tellus
+                    tincidunt a.</p>
+            </div>
+            </section>
 
-    <section class="container_1">
-        <h2>Blogpost 25.5.2021</h2>
-        <p class="text_bubbles">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel tempus dui, eget
-            sagittis tortor. Cras at velit bibendum, porttitor libero quis, ullamcorper urna. Sed non augue arcu.
-            Pellentesque quis nunc quis ligula imperdiet scelerisque. Curabitur vitae elit dignissim metus iaculis
-            cursus. Ut congue, nulla eu feugiat eleifend, leo dolor tincidunt velit, id luctus risus sapien vel
-            augue.
-            Sed malesuada massa et quam porta varius eu porttitor ligula. Aliquam eleifend ipsum nunc, et dictum
-            tellus
-            tincidunt a.</p>
-    </section>
-
-    <footer>
-        <ul>
-            <li><a href="https://github.com/Patabatzis"><img id="logos" src="images/githublogo.png"></a>
-            </li>
-            <li><a href="https://www.linkedin.com/in/patabatzis/"><img id="logos" src="images/linkedin.png"></a></li>
-        </ul>
-    </footer>
+            <footer>
+                <ul>
+                    <li><a href="https://github.com/Patabatzis"><img id="logos" src="images/githublogo.png"></a>
+                    </li>
+                    <li><a href="https://www.linkedin.com/in/patabatzis/"><img id="logos" src="images/linkedin.png"></a>
+                    </li>
+                </ul>
+            </footer>
 </body>
 
 </html>
