--- a/contact.html
+++ b/contact.html
@@ -30,14 +30,14 @@
         <div class="form">
             <form action="/action_page.php">
                 <label for="fname">First Name</label>
-                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
                 <label for="lname">Last Name</label>
-                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
                 <label for="email">Email</label>
-                <input type="text" id="email" placeholder="Email..">
+                <input type="text" id="email" placeholder="Email.." required>
                 <label for="subject">Subject</label>
                 <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" required>
             </form>
         </div>
     </section>
